# serverless_lambda_test

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  serverless.yml  test.json
functions/read-s3-data/: handler.py
